@@ -1,0 +1,7 @@
+Displays known relevant information.
+
+Without any parameter, displays this help text.
+
+With "knowledge list", you can see all you know.
+
+With "knowledge show <number>", displays details about the specified item.
