@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Player knowledge management. See server/knowledge.c for more technical information,
+ and doc/knowledge for playing information.
+Nicolas Weeger 2010-01-17
+
 Fix a crash when using shutdown.
 Nicolas Weeger 2010-01-17
 
